--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "realib",
+  "name": "oxygen",
   "version": "0.0.1",
-  "description": "Boilerplate for creating React component libraries",
+  "description": "React component library",
   "main": "build/realib.cjs.js",
   "module": "build/realib.esm.js",
   "browser": "build/realib.umd.js",
@@ -16,16 +16,20 @@
     "flow:status": "flow status",
     "flow:coverage": "flow coverage"
   },
+  "keywords": [
+    "React component lib",
+    "Styled Components"
+  ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/madeagency/realib.git"
+    "url": "git+https://github.com/leadhomesa/oxygen.git"
   },
-  "author": "MADE Code",
+  "author": "Leadhome",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/madeagency/realib/issues"
+    "url": "https://github.com/leadhomesa/oxygen/issues"
   },
-  "homepage": "https://github.com/madeagency/realib#readme",
+  "homepage": "https://github.com/leadhomesa/oxygen#readme",
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
@@ -36,7 +40,6 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "emotion": "^9.1.1",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -47,19 +50,22 @@
     "eslint-plugin-react": "^7.5.1",
     "flow-bin": "^0.69.0",
     "prettier": "^1.11.1",
+    "prop-types": "^15.7.2",
     "react": "^16.3.1",
-    "react-emotion": "^9.1.1",
     "react-router-dom": "^4.2.2",
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rxjs": "^5.5.10"
+    "rxjs": "^5.5.10",
+    "styled-icons": "^7.2.0"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^3.4.5",
     "@storybook/react": "^3.4.2",
     "npm-run-all": "^4.1.3",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "rollup-plugin-svg": "^1.0.1",
+    "styled-components": "^4.1.3"
   }
 }
