--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
   "scripts": {
     "build": "rollup -c",
     "build-dev": "rollup -c -w",
-    "eslint": "eslint -c .eslintrc src",
-    "flow:start": "flow start",
-    "flow:stop": "flow stop",
-    "flow:status": "flow status",
-    "flow:coverage": "flow coverage"
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "deploy-storybook": "storybook-to-ghpages",
+    "lint": "eslint -c .eslintrc src"
   },
   "keywords": [
     "React component lib",
@@ -29,39 +27,51 @@
   },
   "homepage": "https://github.com/leadhomesa/oxygen#readme",
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.2",
+    "@babel/plugin-external-helpers": "^7.2.0",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-inline-elements": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-flowtype": "^2.41.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-prettier": "^2.4.0",
-    "eslint-plugin-react": "^7.5.1",
-    "flow-bin": "^0.69.0",
     "prettier": "^1.11.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-router-dom": "^4.2.2",
-    "rollup": "^0.57.1",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup": "^1.3.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
     "rxjs": "^5.5.10",
     "styled-icons": "^7.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@storybook/react": "^4.1.13",
+    "@storybook/storybook-deployer": "^2.8.1",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-styled-components": "^1.10.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "eslint": "^5.12.1",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-react": "^7.0.2",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-unicorn": "^7.0.0",
+    "husky": "^1.3.1",
     "npm-run-all": "^4.1.3",
+    "prettier": "^1.16.0",
     "react-dom": "^16.8.3",
-    "rollup-plugin-svg": "^1.0.1",
+    "rollup-plugin-image": "^1.0.2",
+    "rollup-plugin-react-svg": "^2.1.0",
     "styled-components": "^4.1.3"
   }
 }
