--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "React component lib",
     "Styled Components"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/leadhomesa/oxygen.git"
@@ -29,7 +34,6 @@
   "dependencies": {
     "@babel/plugin-external-helpers": "^7.2.0",
     "babel-plugin-external-helpers": "^6.22.0",
-    "prettier": "^1.11.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-router-dom": "^4.2.2",
@@ -38,9 +42,7 @@
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rxjs": "^5.5.10",
-    "styled-icons": "^7.2.0"
-  },
-  "devDependencies": {
+    "styled-icons": "^7.2.0",
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
