--- a/package.json
+++ b/package.json
@@ -32,18 +32,8 @@
   },
   "homepage": "https://github.com/leadhomesa/oxygen#readme",
   "dependencies": {
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.3",
-    "react-router-dom": "^4.2.2",
-    "rollup": "^1.3.0",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rxjs": "^5.5.10",
-    "styled-icons": "^7.2.0",
     "@babel/core": "^7.3.4",
+    "@babel/plugin-external-helpers": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
@@ -54,6 +44,7 @@
     "@storybook/storybook-deployer": "^2.8.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "eslint": "^5.12.1",
@@ -71,10 +62,19 @@
     "husky": "^1.3.1",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.16.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-router-dom": "^4.2.2",
+    "rollup": "^1.3.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-image": "^1.0.2",
+    "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-react-svg": "^2.1.0",
-    "styled-components": "^4.1.3"
+    "rxjs": "^5.5.10",
+    "styled-components": "^4.1.3",
+    "styled-icons": "^7.2.0"
   },
   "devDependencies": {
     "@storybook/addon-info": "^4.1.13"
