--- a/package.json
+++ b/package.json
@@ -66,15 +66,16 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^4.3.1",
-    "rollup": "^1.11.0",
+    "rollup": "^1.11.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-image": "^1.0.2",
     "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-react-svg": "^3.0.0",
     "rxjs": "^5.5.12",
+    "storybook": "^1.0.0",
     "styled-components": "^4.2.0",
-    "styled-icons": "^7.11.0"
+    "styled-icons": "^7.12.0"
   },
   "devDependencies": {
     "@storybook/addon-info": "^5.0.11"
