--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-react": "^7.0.0",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
+    "@storybook/addon-knobs": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "@storybook/storybook-deployer": "^2.8.1",
     "babel-eslint": "^10.0.1",
