--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "build": "rollup -c",
     "build-dev": "rollup -c -w",
-    "storybook": "start-storybook -p 9001 -c .storybook",
+    "storybook": "start-storybook -p 6006",
     "deploy-storybook": "storybook-to-ghpages",
-    "lint": "eslint -c .eslintrc src"
+    "lint": "eslint -c .eslintrc src",
+    "build-storybook": "build-storybook"
   },
   "keywords": [
     "React component lib",
@@ -42,8 +43,6 @@
     "@babel/preset-react": "^7.0.0",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
-    "@storybook/addon-knobs": "^5.0.11",
-    "@storybook/react": "^5.0.11",
     "@storybook/storybook-deployer": "^2.8.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
@@ -69,6 +68,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^4.3.1",
+    "react-svg-loader": "^3.0.1",
     "rollup": "^1.11.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
@@ -81,6 +81,11 @@
     "styled-icons": "^7.12.0"
   },
   "devDependencies": {
-    "@storybook/addon-info": "^5.0.11"
+    "@storybook/addon-info": "^5.0.11",
+    "@storybook/react": "^5.0.11",
+    "@storybook/addon-knobs": "^5.0.11",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addons": "^5.0.11"
   }
 }
