--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    "inline-react-svg",
     "@babel/plugin-syntax-dynamic-import",
     "babel-plugin-styled-components",
     "@babel/plugin-proposal-optional-chaining",
