--- a/package.json
+++ b/package.json
@@ -73,10 +73,11 @@
     "prettier": "^1.16.0",
     "react-dom": "^16.8.3",
     "rollup-plugin-image": "^1.0.2",
-    "rollup-plugin-react-svg": "^2.1.0",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "@storybook/addon-info": "^4.1.13"
+    "@storybook/addon-info": "^4.1.13",
+    "babel-plugin-inline-react-svg": "^1.1.0",
+    "rollup-plugin-react-svg": "^2.1.0"
   }
 }
