--- a/package.json
+++ b/package.json
@@ -81,11 +81,12 @@
     "styled-icons": "^7.12.0"
   },
   "devDependencies": {
-    "@storybook/addon-info": "^5.0.11",
-    "@storybook/react": "^5.0.11",
-    "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-info": "^5.0.11",
+    "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-links": "^5.0.11",
-    "@storybook/addons": "^5.0.11"
+    "@storybook/addons": "^5.0.11",
+    "@storybook/react": "^5.0.11",
+    "babel-plugin-inline-react-svg": "^1.1.0"
   }
 }
