--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leadhome/oxygen",
-  "version": "1.1.0-0",
+  "version": "0.0.5",
   "description": "A react component library",
   "main": "build/oxygen.cjs.js",
   "module": "build/oxygen.esm.js",
