--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@leadhome/oxygen",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "description": "A react component library",
-  "main": "build/realib.cjs.js",
-  "module": "build/realib.esm.js",
-  "browser": "build/realib.umd.js",
+  "main": "build/oxygen.cjs.js",
+  "module": "build/oxygen.esm.js",
   "scripts": {
     "build": "rollup -c",
-    "build-dev": "rollup -c -w",
+    "start": "rollup -c -w",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "deploy-storybook": "storybook-to-ghpages",
     "lint": "eslint -c .eslintrc src",
@@ -33,6 +32,14 @@
   },
   "homepage": "https://github.com/leadhomesa/oxygen#readme",
   "dependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^4.2.0",
+    "styled-icons": "^7.14.0"
+  },
+  "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/plugin-external-helpers": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
@@ -41,40 +48,28 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "@emotion/core": "^10.0.10",
-    "@emotion/styled": "^10.0.10",
-    "@storybook/storybook-deployer": "^2.8.1",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-styled-components": "^1.10.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "husky": "^1.3.1",
-    "npm-run-all": "^4.1.5",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^4.3.1",
-    "react-svg-loader": "^3.0.1",
-    "rollup": "^1.11.3",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-image": "^1.0.2",
-    "rollup-plugin-node-resolve": "^4.2.3",
-    "rollup-plugin-react-svg": "^3.0.0",
-    "rxjs": "^5.5.12",
-    "storybook": "^1.0.0",
-    "styled-components": "^4.2.0",
-    "styled-icons": "^7.12.0"
-  },
-  "devDependencies": {
-    "@leadhome/eslint-config": "^1.0.3",
+    "@leadhome/eslint-config": "^1.0.4",
     "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-info": "^5.0.11",
     "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-links": "^5.0.11",
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
-    "babel-plugin-inline-react-svg": "^1.1.0"
+    "@storybook/storybook-deployer": "^2.8.1",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-inline-react-svg": "^1.1.0",
+    "babel-plugin-styled-components": "^1.10.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "husky": "^1.3.1",
+    "npm-run-all": "^4.1.5",
+    "react-svg-loader": "^3.0.1",
+    "rollup": "^1.11.3",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-image": "^1.0.2",
+    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup-plugin-react-svg": "^3.0.0"
   }
 }
