--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "@leadhome/oxygen",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A react component library",
-  "main": "build/oxygen.cjs.js",
-  "module": "build/oxygen.esm.js",
+  "main": "build/oxygen.js",
   "scripts": {
-    "build": "rollup -c",
     "commit": "npx git-cz",
-    "start": "rollup -c -w",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "deploy-storybook": "storybook-to-ghpages",
     "lint": "eslint -c .eslintrc src",
     "build-storybook": "build-storybook",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "start": "npm run storybook",
+    "prebuild": "npm run clean",
+    "build": "webpack --mode production --config webpack/config.js",
+    "clean": "rimraf build"
   },
   "keywords": [
     "React component lib",
@@ -58,6 +59,7 @@
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "@storybook/storybook-deployer": "^2.8.1",
+    "@svgr/webpack": "^4.2.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-external-helpers": "^6.22.0",
@@ -65,16 +67,14 @@
     "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "cz-conventional-changelog": "^2.1.0",
+    "file-loader": "^3.0.1",
     "husky": "^1.3.1",
     "npm-run-all": "^4.1.5",
     "react-svg-loader": "^3.0.1",
-    "rollup": "^1.11.3",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-image": "^1.0.2",
-    "rollup-plugin-node-resolve": "^4.2.4",
-    "rollup-plugin-react-svg": "^3.0.0",
-    "semantic-release": "^15.13.12"
+    "rimraf": "^2.6.3",
+    "semantic-release": "^15.13.14",
+    "webpack": "^4.32.0",
+    "webpack-cli": "^3.3.2"
   },
   "config": {
     "commitizen": {
