--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,14 @@
   "plugins": [
     "inline-react-svg",
     "@babel/plugin-syntax-dynamic-import",
-    "babel-plugin-styled-components",
+    [
+      "babel-plugin-styled-components",
+      {
+        "ssr": true,
+        "displayName": true,
+        "preprocess": false
+      }
+    ],
     "@babel/plugin-proposal-optional-chaining",
     "@babel/plugin-proposal-class-properties",
     "transform-inline-environment-variables"
