--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@leadhome/oxygen",
   "version": "0.1.4",
   "description": "A react component library",
-  "main": "build/oxygen.js",
+  "main": "lib/index.js",
   "scripts": {
     "commit": "npx git-cz",
     "storybook": "start-storybook -p 9001 -c .storybook",
@@ -12,8 +12,9 @@
     "semantic-release": "semantic-release",
     "start": "npm run storybook",
     "prebuild": "npm run clean",
-    "build": "webpack --mode production --config webpack/config.js",
-    "clean": "rimraf build"
+    "build": "babel src -d lib --ignore **/*.story.js,**/*.spec.js",
+    "develop": "babel src -d lib --ignore **/*.story.js,**/*.spec.js -w",
+    "clean": "rimraf lib"
   },
   "keywords": [
     "React component lib",
@@ -43,7 +44,8 @@
     "styled-icons": "^7.14.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
     "@babel/plugin-external-helpers": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
@@ -73,6 +75,11 @@
     "semantic-release": "^15.13.14",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "styled-components": "^4.2.0"
   },
   "config": {
     "commitizen": {
