--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "cz-conventional-changelog": "^2.1.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "^3.0.1",
     "husky": "^1.3.1",
     "rimraf": "^2.6.3",
