--- a/package.json
+++ b/package.json
@@ -79,5 +79,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "release": {
+    "branch": "next"
   }
 }
