--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@leadhome/oxygen",
-  "version": "0.1.4",
+  "version": "0.6.7",
   "description": "A react component library",
   "main": "build/oxygen.js",
+  "module": "build/oxygen.js",
   "scripts": {
     "commit": "npx git-cz",
     "storybook": "start-storybook -p 9001 -c .storybook",
@@ -34,12 +35,12 @@
     "url": "https://github.com/leadhomesa/oxygen/issues"
   },
   "homepage": "https://github.com/leadhomesa/oxygen#readme",
-  "dependencies": {
+  "peerDepenencies": {
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^4.3.1",
-    "styled-components": "^4.2.0",
+    "styled-components": ">= 4",
     "styled-icons": "^7.14.0"
   },
   "devDependencies": {
@@ -52,12 +53,12 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@leadhome/eslint-config": "^1.2.1",
-    "@storybook/addon-actions": "^5.1.10",
-    "@storybook/addon-info": "^5.1.10",
-    "@storybook/addon-knobs": "^5.1.10",
-    "@storybook/addon-links": "^5.1.10",
-    "@storybook/addons": "^5.1.10",
-    "@storybook/react": "^5.1.10",
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-info": "^5.1.11",
+    "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addon-links": "^5.1.11",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/react": "^5.1.11",
     "@storybook/storybook-deployer": "^2.8.1",
     "@svgr/webpack": "^4.3.2",
     "babel-eslint": "^10.0.1",
@@ -70,11 +71,17 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^3.0.1",
     "husky": "^1.3.1",
-    "rimraf": "^2.6.3",
-    "semantic-release": "^15.13.19",
+    "rimraf": "^2.7.1",
+    "semantic-release": "^15.13.21",
     "storybook-react-router": "^1.0.5",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6"
+    "styled-components": "^4.3.2",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^4.3.1",
+    "styled-icons": "^7.14.0"
   },
   "config": {
     "commitizen": {
