--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,3 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
-  ],
-  "plugins": [
-    "inline-react-svg",
-    "@babel/plugin-syntax-dynamic-import",
-    "babel-plugin-styled-components",
-    "@babel/plugin-proposal-optional-chaining",
-    "@babel/plugin-proposal-class-properties",
-    "transform-inline-environment-variables"
-  ]
+  "presets": ["@babel/react", "@babel/env"]
 }
