--- a/package.json
+++ b/package.json
@@ -1,97 +1,28 @@
 {
   "name": "@leadhome/oxygen",
-  "version": "0.6.6",
-  "description": "A react component library",
-  "main": "build/oxygen.js",
-  "module": "build/oxygen.js",
+  "version": "2.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "commit": "npx git-cz",
-    "storybook": "start-storybook -p 9001 -c .storybook",
-    "deploy-storybook": "storybook-to-ghpages",
-    "lint": "eslint -c .eslintrc src",
-    "build-storybook": "build-storybook",
-    "semantic-release": "semantic-release",
-    "start": "npm run storybook",
-    "prebuild": "npm run clean",
-    "build": "webpack --mode production --config webpack/config.js",
-    "clean": "rimraf build"
-  },
-  "keywords": [
-    "React component lib",
-    "Styled Components"
-  ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
+    "build": "rm -rf build && babel src --out-dir ./build --copy-files",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/leadhomesa/oxygen.git"
+    "url": "git+https://github.com/leadhomesa/oxygen.git"
   },
-  "author": "Leadhome",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/leadhomesa/oxygen/issues"
   },
   "homepage": "https://github.com/leadhomesa/oxygen#readme",
-  "peerDependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "styled-components": ">= 4",
-    "styled-icons": "^9.1.0"
-  },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-external-helpers": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "@leadhome/eslint-config": "^1.4.0",
-    "@storybook/addon-actions": "^5.2.8",
-    "@storybook/addon-info": "^5.2.8",
-    "@storybook/addon-knobs": "^5.2.8",
-    "@storybook/addon-links": "^5.2.8",
-    "@storybook/addons": "^5.2.8",
-    "@storybook/react": "^5.2.8",
-    "@storybook/storybook-deployer": "^2.8.1",
-    "@svgr/webpack": "^4.3.3",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-inline-react-svg": "^1.1.0",
-    "babel-plugin-styled-components": "^1.10.6",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "cz-conventional-changelog": "^3.0.2",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "file-loader": "^5.0.2",
-    "husky": "^3.1.0",
-    "prop-types": "^15.7.2",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "rimraf": "^3.0.0",
-    "semantic-release": "^15.13.31",
-    "storybook-react-router": "^1.0.8",
-    "styled-components": "^4.3.2",
-    "styled-icons": "^9.1.0",
-    "webpack": "^4.41.4",
-    "webpack-cli": "^3.3.10"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "release": {
-    "branch": "next"
-  },
-  "dependencies": {
-    "deprecated-prop-type": "^1.0.0"
+    "react-dom": "^16.12.0"
   }
 }
