Return react & react-dom

--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
     "branch": "next"
   },
   "dependencies": {
-    "deprecated-prop-type": "^1.0.0"
+    "deprecated-prop-type": "^1.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
