--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "file-loader": "^5.0.2",
     "husky": "^3.1.0",
     "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "rimraf": "^3.0.0",
     "semantic-release": "^15.13.31",
@@ -90,8 +92,6 @@
     "branch": "next"
   },
   "dependencies": {
-    "deprecated-prop-type": "^1.0.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "deprecated-prop-type": "^1.0.0"
   }
 }
